<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/alertDialog"
        android:icon="@drawable/index"
        android:title="@string/item1"
        />

    <item android:id="@+id/customAlerdialog"
        android:icon="@drawable/index"
        android:title="@string/item2">
        <menu>
        <item android:id="@+id/item1"
            android:icon="@drawable/index"
            android:title="item1" />

            <item
                android:id="@+id/item2"
                android:icon="@drawable/index"
                android:title="item2"/>
        </menu>
    </item>
    <item android:id="@+id/dialogextended"
            android:icon="@drawable/index"
            android:title="@string/item3"
        />
</menu>