<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/skyblue"
        android:gravity="center"
        android:text="@string/TitleFor3rdItem"
        android:textSize="30sp"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/smiley" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/textViewFor3rdItem"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:id="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@+id/imageView"
           >
            <Button
                android:id="@+id/btnSave"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:background="@drawable/buttonshape"
                android:scrollbarStyle="insideOverlay"

                android:text="@string/Dialogyes"
                android:textSize="20sp"


                android:textStyle="italic"
                />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/buttonshape"
                android:scrollbarStyle="outsideInset"
                android:text="@string/Dialogno"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
